# FCS-ClubHub

./: .gitignore  .replit  LICENSE  README.md  application.py  buildspec.yml  init.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup.py  testdb.py
.ebextensions/: eb.config  python.config
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: test.yml
app/: __init__.py  utils.py
app/api/: calendar.py
app/models/: __init__.py  dbutils.py  mock_db.py  models.py  test_db.py  utils.py
app/sass/: main.scss
app/static/css/: base.css  bootstrap_min.css  bootstrap_min.css.map  index.css  profile.css  register.css
app/static/sass/: main.scss
app/templates/: 404.html  add_meeting.html  base.html  club.html  demo_users.html  edit_club.html  edit_meeting.html  index.html  login.html  profile.html  register.html  register_club.html
app/templates/error/: 400.html  403.html  404.html  4xx.html
app/views/: __init__.py  accounts.py  community.py  general.py  index.py
config/: development.py  production.py  testing.py
tests/: fill_db.py  test_flask.py
