[tool.poetry]
name = "FCS-ClubHub"
version = "0.1.0"
description = "This is a web-app project that the FCS Coding Club will be building throughout the year"
authors = ["Friends' Central Coding Club", "Sean McGoff"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pytest = "^6.2.5"
WTForms = "^3.0.0"
Flask-WTF = "^1.0.0"
email-validator = "^1.1.3"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
